Use ClassIntrospector for ctors